<resources>
    <string name="app_name">金饭碗理财</string>

    <!--登陆注册忘记密码-->
    <string name="tv_login">登录</string>
    <string name="et_input_phone_hint">请输入手机号码</string>
    <string name="et_input_password_hint">请输入密码</string>
    <string name="tv_forget_password">忘记密码</string>
    <string name="tv_register_now">立即注册</string>
    <string name="tv_user_register">用户注册</string>
    <string name="tv_input_information">1输入信息</string>
    <string name="tv_authentication">2身份验证</string>
    <string name="tv_register_success">3注册成功</string>
    <string name="bt_verify_code">验证码发送</string>
    <string name="et_input_code_hint">请输入验证码</string>
    <string name="et_set_login_password_hint">请设置登录密码</string>
    <string name="et_affirm_login_password_hint">请再次确认登陆密码</string>
    <string name="bt_register">注册</string>
    <string name="tv_user_agreement_one">我已阅读并同意</string>
    <string name="tv_user_agreement_two">《用户协议》</string>
    <string name="et_input_real_name_hint">请输入真实姓名</string>
    <string name="et_input_identity_card_hint">请输入身份证号码</string>
    <string name="bt_submit">提交</string>
    <string name="tv_correct_information_one">（请输入正确信息以免影响</string>
    <string name="tv_correct_information_two">资金托管账户申请</string>
    <string name="tv_correct_information_three">等功能）</string>
    <string name="tv_upload_front">请上传身份证正面</string>
    <string name="tv_upload_reverse">请上传身份证反面</string>
    <string name="tv_identity_verify">身份认证</string>
    <string name="tv_photo_sample">拍照示例</string>
    <string name="bt_upload_identity_photo">上传身份证照片</string>
    <string name="tv_skip">跳过</string>
    <string name="bt_get_code">获取验证码</string>
    <string name="bt_affirm">确认</string>
    <string name="bt_next">下一步</string>

    <!--个人中心-->
    <string name="tv_login_out">注销</string>
    <string name="tv_sign_in">签到</string>
    <string name="tv_accumulated_income_total">累计总收入（元）</string>
    <string name="tv_available_balance">可用余额（元）</string>
    <string name="tv_withdrawal_amount">可提现金（元）</string>
    <string name="tv_investment_freeze">投资冻结（元）</string>
    <string name="tv_money_data">0.00</string>
    <string name="tv_recharge">充值</string>
    <string name="tv_withdraw">提现</string>
    <string name="tv_trading_record">交易记录</string>
    <string name="tv_cash_red_packet">现金红包</string>
    <string name="tv_investment_record">投资记录</string>
    <string name="tv_experience_gold_investment">体验金投资</string>
    <string name="tv_my_code">我的积分</string>
    <string name="tv_invite_to_share">邀请分享</string>
    <string name="tv_certification">实名认证</string>
    <string name="tv_bind_phone">绑定手机</string>
    <string name="tv_account_security">账户安全</string>
    <string name="tv_shipping_address">收货地址</string>
    <string name="tv_bank_card_management">银行卡管理</string>
    <string name="tv_center_activity">活动中心</string>
    <string name="tv_help_center">帮助中心</string>
    <string name="tv_my_customer_service">我的客服</string>


    <!--底部文字-->
    <string name="tv_home">首页</string>
    <string name="tv_money">赚钱</string>
    <string name="tv_code">积分</string>
    <string name="tv_my">我的</string>

    <!--绑定手机更换-->
    <string name="tv_warm_prompt">温馨提示：</string>
    <string name="et_login_password">请输入登录密码</string>
    <string name="tv_current_bind">当前绑定手机</string>
    <string name="tv_phone_number">18817772486</string>
    <string name="btn_change_bind">更换绑定</string>
    <string name="tv_bind_tip">更换绑定手机号后，您的原来手机号码将被重置到未认证状态，再次登录请使用新手机号码，密码不变。</string>
    <string name="tv_change_bind_phone">更换绑定手机</string>
    <string name="et_change_bind_phone_hint">请输入更换要绑定的手机号</string>
    <string name="btn_send_code">发送验证码</string>
    <string name="btn_verification">去验证</string>

    <!--账户安全-->
    <string name="tv_login_password">登录密码</string>
    <string name="tv_payment_password">支付密码</string>
    <string name="tv_gesture_password">手势密码</string>
    <string name="tv_set_gesture_password">设置手势密码</string>
    <!--设置支付密码-->
    <string name="tv_set_payment_password">设置支付密码</string>
    <string name="tv_affirm_payment_password">确认支付密码</string>
    <string name="et_input_payment_password_hint">请输入6位支付密码</string>
    <string name="et_affirm_input_password_payment_hint">请再次输入支付密码</string>

    <!--我的积分-->
    <string name="tv_total_code">总积分</string>
    <string name="tv_code_explain">积分说明</string>
    <string name="btn_code_exchange">积分兑换商品</string>
    <string name="tv_recently_recode">最近30天积分记录</string>
    <string name="tv_code_number">分</string>
    <string name="tv_code_number_count">1000</string>
    <string name="item_code_title_name">投资积分</string>
    <string name="item_code_date_time">2016&#8211;10&#8211;12 10:00</string>
    <string name="item_code_number">+222</string>

    <!--交易记录-->
    <string name="item_trading_title">投资项目（订单号2015122010）</string>
    <string name="item_record_audit">正在审核中</string>

    <!--收货地址-->
    <string name="tv_manage">管理</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_address_name">东方不败</string>
    <string name="tv_address_phone">18717893534</string>
    <string name="tv_address_detail">上海市闸北区上海南站无名路78号4栋103室</string>
    <string name="tv_contact">联系人</string>
    <string name="tv_accept_linkman">收货人：</string>
    <string name="et_accept_linkman_hint">请填写收货人的姓名</string>
    <string name="tv_accept_phone">手机号：</string>
    <string name="et_accept_phone_hint">请填写收货人的手机号码</string>
    <string name="tv_edifice_address">小区/大厦/学校:</string>
    <string name="et_baidu_search">点击选择</string>
    <string name="tv_house_number">楼号-门牌号：</string>
    <string name="et_example_house_number">例16号楼403室</string>
    <string name="btn_address_finished">完成</string>
    <string name="tv_province_city">省/市/区/县：</string>
    <string name="tv_address_province">请选择地区</string>

    <!--绑定银行卡-->
    <string name="tv_bind_bank">绑定银行卡</string>
    <string name="tv_name_hint">姓名</string>
    <string name="tv_name">杜**</string>
    <string name="tv_identity_card_number_hint">身份证号</string>
    <string name="tv_identity_card_number">312584***4525</string>
    <string name="tv_identification">认证后不可修改</string>
    <string name="tv_select_bank_card_hint">请选择您的银行卡</string>
    <string name="tv_selected_bank_name">工商银行</string>
    <string name="et_Input_bank_card_number_hint">请输入银行卡号</string>
    <string name="tv_credit_card">不支持信用卡</string>
    <string name="tv_credit_cards">*不支持信用卡gdfdhhf让他发广告花费话费刚好符合规范借记卡ujuduuuu</string>

    <!--体验金投资-->
    <string name="tv_experience_new">新手体验金理财产品</string>
    <string name="btn_immediate_investment">立即投资</string>
    <string name="tv_annual_earning">年化收益</string>
    <string name="tv_annual_earning_rate">15.00%</string>
    <string name="tv_investment_deadline">投资期限</string>
    <string name="tv_investment_amount">投资总额</string>
    <string name="tv_anticipated_income">预计收益</string>
    <string name="tv_experience_gold">您有体验金</string>
    <string name="tv_currency_symbol">元</string>
    <string name="tv_investment_amount_money">20万</string>
    <string name="tv_deadline_day">5天</string>
    <string name="tv_experience_gold_money">20000</string>
    <string name="tv_anticipated_income_money">300</string>
    
    <!--我的红包-->
    <string name="tv_my_red_packet">我的红包</string>
    <string name="tv_all">全部</string>
    <string name="tv_rate_coupon">加息券</string>
    <string name="tv_experience_gold_coupon">体验金</string>
    <string name="tv_coupon_deadline_time">到期时间：</string>
    <string name="tv_coupon_deadline_times">到期时间：2016.11.30</string>
    <string name="tv_coupon_item_user_way">单笔投资金额满1000元时使用，收益率在现有收益上累加</string>
    <string name="tv_coupon_item_use_lowest_money">单笔投资金额满</string>
    <string name="tv_coupon_item_money">1000</string>
    <string name="tv_coupon_item_tip">元时使用，收益率在现有收益上累加</string>
    <string name="tv_coupon_out_date">已过期</string>
    <string name="tv_coupon_used">已使用</string>
    <string name="tv_coupon_symbol">+</string>
    <string name="tv_coupon_money_rate">1.5%</string>

    <!--产品介绍-->
    <string name="tv_product_introduction">产品介绍</string>
    <string name="tv_investment_description">投资描述</string>
    <string name="tv_borrower_information">借款者信息</string>
    <string name="tv_purchase_time">购买期限</string>
    <string name="tv_lock_deadline">锁定期限</string>
    <string name="tv_join_condition">加入条件</string>
    <string name="tv_purchase_limit">购买限制</string>
    <string name="tv_refund_mode">还款方式</string>
    <string name="tv_in_advance_redeem">提前赎回</string>
    <string name="tv_start_time_end_time">2016&#8211;09&#8211;22至2016&#8211;10&#8211;23</string>
    <string name="tv_join_condition_content">加入金额100元起，且以100元的倍数递增</string>
    <string name="tv_purchase_limit_content">100元起投，单次投资上限2万元</string>
    <string name="tv_refund_mode_content">到期还本利息</string>
    <string name="tv_boole_in_advance_redeem">不支持提前赎回</string>
    
    <string name="tv_investment_phone">138***02</string>
    <string name="tv_investment_date">2016.11.02 12:12</string>
    <string name="tv_investment_money">￥2000.00</string>

    <!--<string name="tv_"-->
<!--Snackbar-->
    <string name="input_phone_show">输入的手机号码不能为空！</string>
    <string name="phone_format_show">输入的手机格式不正确，请仔细核对！</string>
    <string name="phone_register_show">该手机号已经注册，请登录！</string>
    <string name="exit_app_show">再按一次退出金饭碗理财</string>
    <string name="find_passwd_send_countdown">重新发送(%sS)</string>
    <string name="name_empty_show">请输入姓名</string>
    <string name="name_not_standard_show">输入的姓名只能为汉字！</string>‘
    <string name="name_not_length_show">输入的姓名长度不符合规范！</string>
    <string name="register_success_show">注册成功，即将跳转到登录页面！</string>
    <string name="input_password_empty_show">设置的新密码不能为空！</string>
    <string name="input_affirm_password_empty_show">设置的确认密码不能为空！</string>
    <string name="input_password_format_show">设置的密码长度不符合规范！</string>
   <string name="modify_success_password_show">密码设置成功，即将跳转到登录界面！</string>
    <string name="unregister_phone_show">手机号未注册，即将跳转到注册页面！</string>


    <!--EditText 提示信息-->
    <string name="hint_password_length_less_error">设置的密码长度不得少于6位</string>
    <string name="hint_password_length_long_error">设置的密码长度不得多于20位</string>
    <string name="hint_password_same_twice_error">两次输入的密码不一致，请重新输入</string>
    <string name="hint_captcha_error">验证码不能为空！</string>
    <string name="hint_captcha_format_error">验证码不符合规范</string>

    <!--登录的错误信息-->
    <string name="error_password_empty">输入的密码不能为空！</string>
    <string name="error_password_format">输入密码的格式不正确！</string>



<!--Permisssion-->
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="select">请选择</string>

    <string name="splash_info">In fact you really amazing</string>

    <!--dialog-->
    <string name="login_out_dialog">是否要退出登录？</string>
    <string name="call_phone_alert">是否要拨打客服电话？</string>
    <string name="confirm_dialog">确定</string>
    <string name="code_popu_show">积分赚的多，商品趣味多</string>
    
    <!--home-->
    <string name="tv_investment">投资理财</string>
    <string name="tv_share_gift">分享送礼</string>
    <string name="tv_ensure_safe">保障无忧</string>
    <string name="tv_home_experience">体验宝</string>
    <string name="btn_home_investment_less_limit">100元起投 到期还息付利</string>
    <string name="tv_home_investment_time_count_down">投资倒计时 3天20时25分</string>
    
    

</resources>
