<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@id/back_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.small"
            android:src="@drawable/ic_back_black_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_bind_bank"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/tint_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginRight="@dimen/space.medium"
        android:layout_marginTop="@dimen/space.medium_normal"
        android:background="@drawable/bg_round_color_white_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.medium"
            android:text="@string/tv_name_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/gray_deep" />

        <TextView
            android:id="@id/tv_bank_account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.medium"
            android:text="@string/tv_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/tint_color" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginRight="@dimen/space.medium"
        android:layout_marginTop="@dimen/space.medium"
        android:background="@drawable/bg_round_color_white_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.medium"
            android:text="@string/tv_identity_card_number_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/gray_deep" />

        <TextView
            android:id="@id/tv_identity_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.medium"
            android:text="@string/tv_identity_card_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/tint_color" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/space.medium"
        android:text="@string/tv_identification"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/orange_deep" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginRight="@dimen/space.medium"
        android:background="@drawable/bg_round_color_white_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.medium"
            android:text="@string/tv_select_bank_card_hint"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/gray_deep" />

        <TextView
            android:id="@id/tv_bank_account_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.medium"
            android:gravity="center"
            android:drawablePadding="@dimen/space.small"
            android:drawableStart="@drawable/ic_icbc_bank"
            android:drawableLeft="@drawable/ic_icbc_bank"
            android:drawableRight="@drawable/ic_arrow_right_gray"
            android:drawableEnd="@drawable/ic_arrow_right_gray"
            android:text="@string/tv_selected_bank_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/tint_color" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginRight="@dimen/space.medium"
        android:layout_marginTop="@dimen/space.medium"
        android:background="@drawable/bg_round_color_white_line">
        <EditText
            android:id="@id/et_bank_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/space.medium"
            android:inputType="number"
            android:textColor="@color/tint_color"
            android:textColorHint="@color/gray_deep"
            android:hint="@string/et_Input_bank_card_number_hint"
            android:maxLength="25"/>
        </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange_deep"
        android:padding="@dimen/space.medium"
        android:text="@string/tv_credit_card"/>
    <Button
        android:id="@id/btn_affirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginStart="@dimen/space.medium"
        android:layout_marginEnd="@dimen/space.medium"
        android:background="@drawable/bg_round_color_primary"
        android:text="@string/bt_affirm"
        android:textColor="@color/tint_color"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginRight="@dimen/space.medium"/>

</LinearLayout>