<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@id/back_left"
            android:src="@drawable/ic_back_black_left"
            android:layout_centerVertical="true"
            android:padding="@dimen/space.small"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tint_color"
            android:text="@string/tv_bind_phone"
            android:layout_centerInParent="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/space.medium">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/tv_current_bind"
        android:textColor="@color/gray_deep"/>
        <TextView
            android:id="@id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/orange_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginStart="@dimen/space.medium"
        android:layout_marginEnd="@dimen/space.medium"
        android:layout_marginRight="@dimen/space.medium"
        android:orientation="horizontal"
        android:background="@drawable/bg_round_shallow_gray_input">
        <EditText
            android:id="@id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space.very_small"
            android:layout_marginStart="@dimen/space.very_small"
            android:inputType="textPassword"
            android:textColorHint="@color/gray"
            android:hint="@string/et_login_password"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/tint_color"
            android:maxLength="25"/>
    </LinearLayout>
    <Button
        android:id="@id/btn_change_bind"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height_normal"
        android:background="@drawable/bg_round_color_primary"
        android:text="@string/btn_change_bind"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/tint_color"
        android:layout_marginStart="@dimen/space.medium"
        android:layout_marginRight="@dimen/space.medium"
        android:layout_marginEnd="@dimen/space.medium"
        android:layout_marginTop="@dimen/space.medium"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginBottom="@dimen/space.medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space.medium"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginStart="@dimen/space.medium"
        android:text="@string/tv_warm_prompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/gray_deep"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space.medium"
        android:layout_marginLeft="@dimen/space.medium"
        android:layout_marginStart="@dimen/space.medium"
        android:layout_marginRight="@dimen/space.medium"
        android:layout_marginEnd="@dimen/space.medium"
        android:text="@string/tv_bind_tip"
        android:lineSpacingExtra="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/tint_color"/>
</LinearLayout>