<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_black_left"
            android:padding="@dimen/space.small"
            android:id="@id/back_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/tint_color"
            android:layout_centerInParent="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:text="@string/tv_my_red_packet"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">
        <TextView
            android:id="@id/tv_all"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/space.medium"
            android:textColor="@color/colorPrimary"
            android:text="@string/tv_all"/>
        <TextView
            android:id="@id/tv_cash_red_packet"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/space.medium"

            android:textColor="@color/gray_deep"
            android:text="@string/tv_cash_red_packet"/>
        <TextView
            android:id="@id/tv_rate_coupon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/space.medium"
            android:textColor="@color/gray_deep"
            android:text="@string/tv_rate_coupon"/>
        <TextView
            android:id="@id/tv_experience_gold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/space.medium"
            android:textColor="@color/gray_deep"
            android:text="@string/tv_experience_gold_coupon"/>

    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <ListView
            android:id="@id/list_red_packet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>

</LinearLayout>