<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginBottom="1dp"
    android:padding="@dimen/space.medium">
    <TextView
        android:id="@id/item_investment_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_investment_phone"
        android:textColor="@color/black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
<TextView
    android:id="@id/item_investment_date"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textColor="@color/gray_deep"
    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
    android:layout_marginTop="@dimen/space.small"
    android:layout_below="@id/item_investment_phone"
    android:text="@string/tv_investment_date"/>
    <TextView
        android:id="@id/tv_investment_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorPrimary"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/tv_investment_money"/>


</RelativeLayout>