<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/space.medium">

    <TextView
        android:id="@id/item_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_code_title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/tint_color" />

    <TextView
        android:id="@id/item_code_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/item_code_number"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/orange_button" />

    <TextView
        android:id="@id/item_code_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/item_code_title"
        android:text="@string/item_code_date_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/gray_deep" />


</RelativeLayout>